feat(signal-job): KV current-table replay safety (CANDLE-KV-REPLAY-001)
- feature_candles_15s_current: KV twin of feature_candles_15s (PK instrument_token+window_start, 16 buckets, token colocation, 7d TTL); DDL 22 + schema_manifest regenerated (21 tables, make ddl gate passes)
- SignalJob: dual sink (LOG append unchanged + KV upsert via RowDataSerializationSchema(false,false), KV sink = last out-edge so stateful op IDs stay stable)
- SignalJobConfig: candleCurrentTable, allowFullReplay, startupMode() validation (RESTORE/FULL_REPLAY, no unsafe default), stateRecoveryPath, WARN-level FULL_REPLAY startup event + compute.startup.mode gauge
- CandleTableContractValidator: startup preflight of live LOG/KV candle metadata (15-col v2, PK, bucket key, 16 buckets)
- CanonicalCandlePolicy: schema/algorithm/configuration version canonicality check
- CandleMigrationTool + JobGraphDump: offline LOG->KV audit/load runbook + pre/post JobGraph graph-compat dumps
- DdlBootstrap: ALL_TABLES 21 entries incl. current table; ensureTables creates only OWNED_TABLES (3); real 15-col schemas
- Tests: CandleCurrentKvIdempotencyTest (integration-gated), CandleCurrentDdlContractTest, CandleTableColumnsAgreementTest, CandleTableContractValidatorTest (10), CanonicalCandlePolicyTest, CandleMigrationToolTest (11), fixtures ALLOW_FULL_REPLAY=true; common 104 + ingestion 175 green
- Docs: 13-candle-log-kv-replay-safety.md tracker, storage reqs/contracts, 04-signal-job.md, SQL README, blocker, compute README